# Description: Monitor

load(
    "//build_extensions:android_library_instrumentation_tests.bzl",
    "android_library_instrumentation_tests",
)
load(
    "//build_extensions:android_library_local_tests.bzl",
    "android_library_local_tests",
)
load(
    "//build_extensions:test_devices.bzl",
    "DEVICES",
)

package(
    default_testonly = 1,
)

licenses(["notice"])  # Apache License 2.0

android_library_local_tests(
    name = "monitor_robolectric_tests",
    srcs = ["internal/util/LogUtilsTest.java"],
    deps = [
        "//runner/monitor",
        "@maven//:junit_junit",
        "@maven//:org_robolectric_shadows_framework",
        "@maven//:com_google_truth_truth",
    ],
)

android_library_instrumentation_tests(
    name = "monitor_tests",
    srcs = glob(
        ["**/*.java"],
        exclude = [
            "internal/util/LogUtilsTest.java",
        ],
    ),
    target_devices = DEVICES,
    deps = [
        "//core",
        "//ext/junit",
        "//runner/android_junit_runner",
        "//runner/monitor",
        "//runner/monitor/javatests/androidx/test/internal/platform:fixtures",
        "//runner/rules",
        "//:androidx_annotation",
        "@maven//:org_hamcrest_hamcrest_all",
        "@maven//:junit_junit",
        "@maven//:org_mockito_mockito_core",
        "@maven//:com_linkedin_dexmaker_dexmaker",
        "@maven//:com_linkedin_dexmaker_dexmaker_mockito",
        "@maven//:org_objenesis_objenesis",
        "@maven//:com_google_truth_truth",
    ],
)
