# Description: Tests for Rules.

load(
    "//build_extensions:android_library_instrumentation_tests.bzl",
    "android_library_instrumentation_tests",
)
load(
    "//build_extensions:test_devices.bzl",
    "DEVICES",
)

package(
    default_testonly = 1,
)

licenses(["notice"])  # Apache License 2.0

android_library(
    name = "manifest",
    manifest = "AndroidManifest.xml",
    exports_manifest = 1,
)

# TODO(b/117464840): remove when legacy_test-29 is a neverlink target
java_library(
    name = "legacy-test-neverlink",
    neverlink = 1,
    exports = [
        "@androidsdk//:legacy_test-29",
    ],
)

android_library_instrumentation_tests(
    name = "rules_tests",
    srcs = glob(["*.java"],),
    target_devices = DEVICES,
    deps = [
        ":legacy-test-neverlink",
        ":manifest",
        "//core",
        "//ext/junit",
        "//runner/android_junit_runner",
        "//runner/rules",
        "//:androidx_annotation",
        "@maven//:org_hamcrest_hamcrest_all",
        "@maven//:junit_junit",
        "@maven//:org_mockito_mockito_core",
        "@maven//:com_linkedin_dexmaker_dexmaker",
        "@maven//:com_linkedin_dexmaker_dexmaker_mockito",
        "@maven//:org_objenesis_objenesis",
    ],
)